--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.3",
+    "framer-motion": "^12.3.0",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
