--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.3",
     "framer-motion": "^12.3.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.3"
