--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/speech": "^6.7.1",
     "@google-cloud/vision": "^4.3.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "bcryptjs": "^2.4.3",
