--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^6.4.7",
     "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.3",
+    "axios": "^1.8.2",
     "framer-motion": "^12.3.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
